examples/simple/violates-constraint/CV-EFNC2-bad.c
// Copyright (c) 2015 Runtime Verification, Inc. All Rights Reserved.

int foo();

int main(void){
	foo(5);
}

int foo(){
	return 0;
}
